--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
 * { 
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
 }
+.header {
+    display: flex;
+    justify-content: flex-start;
+	flex-direction: row;
+	gap: 1px;
+}
+.shopName{
+	display: inline-flex;
+    padding-right: 20px;
+    font-family: "Akaya Telivigala";
+    font-size: medium;
+	align-self: flex-start;
+}
+.navBtn {
+    display: inline-flex;
+    padding-right: 20px;
+    font-family: "Akaya Telivigala";
+    font-size: medium;
+}
+.prodLink{
+	color: black;
+	text-decoration: none;
+
+}
+.innerbox{
+    display: flex;
+    flex-direction: column;
+}
+.innerboxText{
+    margin-left: 5px;
+}
+
