edit field and button only showing when you're admin

--- a/public/style.css
+++ b/public/style.css
@@ -34,4 +34,9 @@
 .innerboxText{
     margin-left: 5px;
 }
-
+.editFeild-inactive{
+    display: none;
+}
+.editFeild-active{
+    display: active;
+}
