--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 * { 
 	margin:0;
 	padding: 2px;
 	box-sizing: border-box;
+}
+.app{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+}
+.backdrop{
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
 }
 .header {
     display: flex;
@@ -54,7 +67,6 @@
     justify-content: space-evenly;
     overflow: auto;
     padding-top: 50px;
-    background-color: cadetblue;
     height: 100vh;
 }
 .featuredContainer{
@@ -66,9 +78,16 @@
 .featuredShowBox{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: baseline;
+    width: 250px;
+    padding-left: 15px;
+    height: 400px;
+    align-items: center;
+    border: 2px solid black;
+    font-family: 'Lobster', cursive;
 }
+
 .fpName{
     display: flex;
     text-decoration: none;
@@ -76,7 +95,6 @@
     color: black;
     align-self: center;
     justify-content: center;
-    background-color: grey;
 }
 .featuredLink{
     text-decoration: none;
@@ -87,19 +105,57 @@
 }
 .home{
     font-family: "Akaya Telivigala";
-    background-color: chocolate;
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 15vh;
+    margin-top: 100px;
+    
 }
-.backdrop{
-    background-color: cyan;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+
 .loggedInMessage{
     
 }
 .loggedOutMessage{
+    display: flex;
+    align-items: center;
+    justify-self: center;
     
+}
+.slogan{
+    font-style: italic;
+    color: black;
+    text-decoration: underline;
+    font-size: 18px;
+}
+.shopName{
+    color: red;
+    font-style: italic;
+}
+.welcome{
+    display: inline-flex;
+}
+.catBox{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: flex-start;
+}
+.category{
+    display: flex;
+    flex-direction: column;
+    width: auto;
+}
+.innerbox{
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    width: auto;
+    padding-left: 15px;
+    height: 400px;
+    width: 350px;
+    align-items: center;
+    border: 2px solid black;
+    font-family: 'Lobster', cursive;
 }
