--- a/public/style.css
+++ b/public/style.css
@@ -11,16 +11,18 @@
     flex-direction: column;
     width: 100%;
     padding: 10px;
+    position:fixed;
 }
 .backdrop{
     height: 90vh;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 .header {
     display: flex;
 	justify-content: space-between;
-
+    align-items: baseline;
 }
 .shopName{
 	display: inline-flex;
@@ -33,7 +35,9 @@
     font-family: "Akaya Telivigala";
     font-size: x-large;
 	color: black;
-	text-decoration: none;
+}
+.link{
+    text-decoration: black underline;
 }
 .prodLink{
 	color: black;
@@ -63,9 +67,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    overflow: auto;
-    padding-top: 50px;
-    height: 100vh;
+    height: 70vh;
 }
 .featuredContainer{
     display: flex;
@@ -77,13 +79,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: baseline;
+    justify-content: center;
     width: 250px;
-    padding-left: 15px;
+    background-color: red;
     height: 400px;
     align-items: center;
-    border: 2px solid black;
-    font-family: 'Lobster', cursive;
+    border: 5px solid black;
+    border-radius: 2%;
+    font-family: "Akaya Telivigala";
+    font-size: large;
 }
 
 .fpName{
@@ -93,6 +97,7 @@
     color: black;
     align-self: center;
     justify-content: center;
+    font-size: medium;
 }
 .featuredLink{
     text-decoration: none;
@@ -111,28 +116,28 @@
     margin-top: 100px;
     
 }
-
-.loggedInMessage{
-    
-}
-.loggedOutMessage{
-    display: flex;
-    align-items: center;
-    justify-self: center;
-    
+.userName{
+   font-size: 45px;
 }
 .slogan{
     font-style: italic;
     color: black;
     text-decoration: underline;
-    font-size: 18px;
+    font-size: 30px;
+    align-self: center;
+    font-style: italic;
 }
 .shopName{
     color: red;
-    font-style: italic;
+    font-size: 60px;
 }
 .welcome{
-    display: inline-flex;
+    display: flex;
+    align-items: baseline;
+}
+.message{
+    display: flex;
+    flex-direction: column;
 }
 .catBox{
     display: flex;
@@ -157,3 +162,48 @@
     border: 2px solid black;
     font-family: 'Lobster', cursive;
 }
+.individualContainer {
+    display: flex;
+    height: auto;
+    width: 100%;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
+.showbox{
+    height: auto;
+    width: 50%;
+    border: 5px solid black;
+    border-radius: 2%;
+    padding:10px;
+    color: black;
+    background-color: red;
+}
+.ipText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    font-family: "Akaya Telivigala";
+}
+.prodPhoto{
+    border: 5px solid black;
+    border-radius: 2%;
+}
+.innerboxTextName{
+    padding-bottom: 10px;
+}
+.innerText{
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+.innerbox{
+    border: 5px solid black;
+    border-radius: 2%;
+    padding:10px;
+    color: black;
+    background-color: red;
+}
+
