added a profile page and minor styling

--- a/public/style.css
+++ b/public/style.css
@@ -55,9 +55,25 @@
 .innerbox{
     display: flex;
     flex-direction: column;
+    height: auto;
 }
+.innerbox{
+    justify-content: baseline;
+    width: auto;
+    padding:10px;
+    height: 500px;
+    width: 350px;
+    align-items: center;
+    font-family: 'Lobster', cursive;
+    border: 5px solid black;
+    background-color: red;
+    border-radius: 2%;
+}
+ 
+
 .innerboxText{
     margin-left: 5px;
+    padding-top: 10px;
 }
 .editFeild-inactive{
     display: none;
@@ -165,18 +181,7 @@
     flex-direction: column;
     width: auto;
 }
-.innerbox{
-    display: flex;
-    flex-direction: column;
-    justify-content: baseline;
-    width: auto;
-    padding-left: 15px;
-    height: 400px;
-    width: 350px;
-    align-items: center;
-    border: 2px solid black;
-    font-family: 'Lobster', cursive;
-}
+
 .individualContainer {
     display: flex;
     height: auto;
@@ -214,11 +219,5 @@
     padding-bottom: 10px;
     padding-top: 10px;
 }
-.innerbox{
-    border: 5px solid black;
-    border-radius: 2%;
-    padding:10px;
-    color: black;
-    background-color: red;
-}
+
 
