--- a/src/style.css
+++ b/src/style.css
@@ -247,3 +247,8 @@ input[type=number]::-webkit-outer-spin-button {
     display:flex;
     align-items: center;
 }
+.userBox{
+    display:flex;
+    border-bottom: 1px solid black;
+    background-color: blueviolet;
+}
