--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@
     padding-right: 20px;
     font-family: "Akaya Telivigala";
     font-size: xx-large;
+    padding-left:5px;
 }
 .navBtn {
     display: inline;
@@ -301,12 +302,10 @@ input[type=number]::-webkit-outer-spin-button {
     margin-left: 15%;
     font-family: "Akaya Telivigala";
 }
-
 .checkout_whole{
     display: flex;
     justify-content: center; 
     font-family: "Akaya Telivigala";
-
 }
 .billing_txt{
     padding-bottom:10px ;
@@ -318,15 +317,13 @@ input[type=number]::-webkit-outer-spin-button {
     padding-bottom:10px ;
     padding-top: 10px;
     margin-left:5px;
-
 }
 .whole_form{
     display: flex;
     flex-direction:column;
     justify-content:center;
     background-color:red;
-    width:30%;
-    
+    width:30%; 
 }
 .payment_form{
     display: flex;
@@ -337,19 +334,16 @@ input[type=number]::-webkit-outer-spin-button {
     align-items: center;
     padding-top: 10px;
     margin-left:5px;
-
 }
 .checkout_input{
     align-items: center;
     width:75%;
     margin-left:5px;
-
 }
 .checkout_input_last{
     align-items: center;
     width:75%;
     margin-left:5px;
-
 }
 .checkout_confirmbtn{
     width:25%;
@@ -362,4 +356,23 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .navBtn{
     color: white;
+}
+.userInfo{
+    border: 5px inset red;
+    font-family: "Akaya Telivigala";
+    height: 30%;
+    
+}
+.myprofiletxt{
+    font-size: 35px;
+    padding-top:10px;
+    padding-left:10px;
+
+}
+.userInfo_slot{
+    padding-top: 10px;
+    padding-left:10px;
+}
+.user_input{
+    font-size: 20px;
 }
