--- a/src/style.css
+++ b/src/style.css
@@ -376,3 +376,21 @@ input[type=number]::-webkit-outer-spin-button {
 .user_input{
     font-size: 20px;
 }
+.orderhistory{
+    display: flex;
+    font-family: "Akaya Telivigala";
+    flex-direction: column;
+    margin-left:10%;
+    margin-top: 10%;
+    height:100%;
+    font-style: italic;
+}
+.author{
+    margin-left: 65%;
+    margin-top:5%;
+    font-size: 30px;
+}
+.reply{
+    margin-top:5%;
+    font-size: 40px;
+}
